Bug 396225 - When importing a ofx/qif file, it does not show me all my accounts
Summary: When importing a ofx/qif file, it does not show me all my accounts
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 5.0.1
Platform: Gentoo Packages Linux
: NOR major
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-05 21:28 UTC by Beetle B.
Modified: 2019-04-19 08:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.4
Sentry Crash Report:


Attachments
Accounts with this icon show up in the list. (1.30 KB, image/png)
2018-07-09 18:05 UTC, Beetle B.
Details
Accounts with this (and other) icon do not show up. (1.62 KB, image/png)
2018-07-09 18:05 UTC, Beetle B.
Details
Dialog where my account should show up. (31.38 KB, image/png)
2018-09-23 06:11 UTC, Beetle B.
Details
List of accounts (79.57 KB, image/png)
2018-10-07 20:58 UTC, Beetle B.
Details
List of accounts in the import dialog for OFX (53.86 KB, image/png)
2018-10-07 20:58 UTC, Beetle B.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Beetle B. 2018-07-05 21:28:43 UTC
Steps:

1. Download QIF file from bank
2. Import QIF
3. KMyMoney doesn't know which account it is associated with. It shows me a list of Asset accounts to tie it into.

The problem is, the list is very incomplete. It shows probably only half the accounts I have.

Same problem if I import OFX.

Same problem if I use the Web OFX (mapping to online account).

When I try to use CSV import, I go through all the steps of selecting the columns, etc - but at the end nothing gets imported! (No error either).

Note I have successfully used QIF import for a credit card account (the account was in the list of Liabilities accounts...)
Comment 1 Beetle B. 2018-07-05 21:33:46 UTC
Small correction: Finally got the CSV file to import - it showed me all accounts.
Comment 2 Jack 2018-07-07 17:37:41 UTC
When you say the list of accounts is incomplete, it is not showing all Asset accounts or not showing all types of accounts?  QIF and OFX import include something about the type of account, so KMM tries to only display relevant accounts.   So, please specify the type of account of the import, and the account type of accounts not shown that you think should be shown.
Comment 3 Beetle B. 2018-07-07 20:12:11 UTC
Not showing all Asset accounts. 

The QIF file is from a bank (checking account). The importer shows only a few Asset accounts (less than half of the ones I have).
Comment 4 Jack 2018-07-07 20:19:20 UTC
I wasn't sufficiently clear.  Of the asset account shown vs. not shown, is there any pattern based on account type (savings, checking, cash, asset, ...)?
Comment 5 Beetle B. 2018-07-09 18:04:36 UTC
I looked at the details of two of them (one showing and one not) and couldn't discern a difference. However, in the Account view, they do show up with separate icons. All the ones that have an icon similar to showing.png show up. All others do not (example provided of one icon that doesn't). 

Not sure how these icons are set...
Comment 6 Beetle B. 2018-07-09 18:05:04 UTC
Created attachment 113849 [details]
Accounts with this icon show up in the list.
Comment 7 Beetle B. 2018-07-09 18:05:25 UTC
Created attachment 113850 [details]
Accounts with this (and other) icon do not show up.
Comment 8 Jack 2018-07-09 19:36:21 UTC
The showing icon looks like a checking account.  I don't recognize the other, so you might try changing your icon theme to see what a different theme shows, but it looks like it might be a loan account.  Are the ones that do show up all checking and/or savings accounts?  What type of accounts are the ones that do not show up.  However, loan accounts are not asset accounts, so I'm still a bit confused about the details.  Can you create a reduces kmy file and ofx import file that demonstrates the problem?  You could try saving the kmy file as an anonymous file and then edit the ofx to remove any identifying info.
Comment 9 Thomas Baumgart 2018-09-08 11:56:12 UTC
@Beetle B: please use "Account/Edit account" to determine the exact account type which is shown as part of the opening information. See https://docs.kde.org/stable4/en/extragear-office/kmymoney/details.accounts.edit.html for details. Extracting the account type from the icon is a bit hard, because not every account type has its own icon and icons vary over themes.
Comment 10 Beetle B. 2018-09-10 01:58:22 UTC
OK - This is interesting! The accounts that do not show up have the "Type" and "Currency" fields grayed out (the type seems to show "Asset" but I don't know if that's relevant).

Those that do show up do NOT have the Type as grayed out - and the type is "Checking". 

I looked at only a few, but that's the difference I noted. Why would the other accounts not have a type?
Comment 11 Thomas Baumgart 2018-09-10 06:40:00 UTC
Thanks. Some account types are not grayed out, because it is possible to change them to another (similar) type. From the top of my head this is possible for checkings, savings and cash. For the types where a type change is not possible the button is disabled (grayed out).

The currency selection is disabled at (almost) all times because there is no chance to change that. It is enabled only if it is not referenced by any transaction, I believe.

Can you attach a screenshot of the dialog where you expect the accounts to appear? It would make things for me easier to find. Thanks in advance.
Comment 12 Jack 2018-09-22 20:38:01 UTC
@Beetle B: please provide additional info as requested by Thomse.

Note he said why the Type dropdown might be disabled, but those accounts still have a Type - you just can't change it.  If an account has a type you can't change to the type of account you are importing to, it won't show up on the list.
Comment 13 Beetle B. 2018-09-23 06:11:53 UTC
Created attachment 115176 [details]
Dialog where my account should show up.

Screenshot added.
Comment 14 Jack 2018-09-23 20:49:15 UTC
Are there any accounts under that dropdown?  It should show all checking and savings accounts at least.  Also, please try a screenshot of the accounts view, with the asset accounts fully expanded.  I assume that will show both the accounts that do show up and those that do not show up when it asks you for an account to import into?
Comment 15 Beetle B. 2018-09-26 02:47:46 UTC
Yes, there are accounts, but as I said in comment 10 above, the ones that show up are Checking accounts, and the ones that don't show up have the account type grayed out. I'm not sure how this came to be - something I did when I created the account? I do know some years ago those accounts would show up in this dialog, though.

>Also, please try a screenshot of the accounts view, with the asset accounts fully expanded. I assume that will show both the accounts that do show up and those that do not show up when it asks you for an account to import into?

Yes.

Sorry, I'm a bit wary of posting my bank names on a public forum (hence no screenshot). These are local banks, and I'd rather not advertise my location on the Internet.
Comment 16 Jack 2018-09-26 03:00:01 UTC
No problem wanting to keep your privacy.  I can see a several options here.  One - try creating an anonymous file.  That will change the names of the accounts.  Jus confirm that the snow up/not show up problem still happens.  Two, create a copy of the file, and alter the account names.  Three, just look at your actual account view and then create a nested list of the accounts - changing the names, but keeping the relationships.  The problem is that right now, we can't figure out why account do or do not show up when you expect them to, since we don't have a real list of the actual accounts to know what should or shouldn't show up.
Comment 17 Beetle B. 2018-10-07 20:58:38 UTC
Created attachment 115478 [details]
List of accounts
Comment 18 Beetle B. 2018-10-07 20:58:58 UTC
Created attachment 115479 [details]
List of accounts in the import dialog for OFX
Comment 19 Beetle B. 2018-10-07 20:59:18 UTC
I renamed all the accounts and created two new screenshots.
Comment 20 Thomas Baumgart 2018-10-13 14:06:21 UTC
As Jack has pointed out, KMyMoney only shows the accounts that have a matching type. In your case you import a QIF which contains data for an account of type 'checking'. You can see that on the screenshot with the account selection dialog.

Hence KMyMoney only presents the accounts which have been created with type 'checking'. Looking at the 'list of accounts' one can see that most are simply created as 'Asset' accounts (the ones that carry the word 'PAID' in the icon).

Of course we could change the logic to show all asset accounts and do the same for the other special asset types (savings, investment, etc.). The same would apply to the liability accounts.

@Jack: Should we go that route? Maybe as a quick fix and later on add a checkbox to turn on display of all accounts if the one the user looks for is not in the type matching set. What do you think?
Comment 21 Jack 2018-10-14 19:33:41 UTC
Brendan said in a separate email: "I vote for showing all accounts until you can add a way to turn all accounts on and off. I have a Savings account that has the ACCTTYPE set to MONEYMRKT and KMM only shows me my brokerage accounts unless I run a sed command on the file to change ACCTTYPE to SAVINGS."

I'm not sure of the best interface for this - as we do not want to show a long list of accounts if it is not necessary, but we do want to avoid the problem of this bug.  What about using the current filter, but adding a checkbox or button to that dialog saying "If you do not see the account you want to import into, click here to see account of other types, which may include your desired account." ?
Comment 22 Andrew Crouthamel 2018-11-01 18:49:26 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least 15 days. Please provide the requested information as soon as possible and set the bug status as REPORTED. Due to regular bug tracker maintenance, if the bug is still in NEEDSINFO status with no change in 30 days, the bug will be closed as RESOLVED > WORKSFORME due to lack of needed information.

For more information about our bug triaging procedures please read the wiki located here: https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please set the bug status as REPORTED so that the KDE team knows that the bug is ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 23 Jack 2018-11-01 20:04:48 UTC
Changing status back to confirmed, since it was not done when the additional information was submitted.  Perhaps at this point, since KMM is behaving according to design, we should change this to wishlist?
Comment 24 Beetle B. 2018-11-02 02:13:14 UTC
(In reply to Thomas Baumgart from comment #20)
> Hence KMyMoney only presents the accounts which have been created with type
> 'checking'. Looking at the 'list of accounts' one can see that most are
> simply created as 'Asset' accounts (the ones that carry the word 'PAID' in
> the icon).

I guess you can call this a feature request, but I'm wondering when this behavior began. My accounts have been around for years, but this problem is relatively recent (a year or so?).

Perhaps a simpler feature request is to allow me to change my account type from Asset to Checking.
Comment 25 Thomas Baumgart 2019-04-19 08:11:34 UTC
Git commit 1ef147cdc5bab0a84bb30f3af1b8355c38fe433e by Thomas Baumgart.
Committed on 19/04/2019 at 07:56.
Pushed by tbaumgart into branch '5.0'.

Show all asset and liability accounts during statement import

This change is a workaround to allow access to all asset and liability
accounts despite the information provided in the data from the
institution (which we have learned in some cases is just wrong).

A better approach would be to have a UI option to enhance the list does
not contain the account the user is looking for.
Related: bug 392305
FIXED-IN: 5.0.4

M  +6    -0    kmymoney/converter/mymoneystatementreader.cpp

https://commits.kde.org/kmymoney/1ef147cdc5bab0a84bb30f3af1b8355c38fe433e